# fractal-ome-zarr-hcs-stitching

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  data.json  pyproject.toml
.github/workflows/: ci.yml  ci_pip.yml  coverage.yml
_playground/: exploration.ipynb
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_a37c1085e6320966___init___py.html  z_a37c1085e6320966_stitching_task_py.html  z_a37c1085e6320966_utils_py.html
src/fractal_ome_zarr_hcs_stitching/: __FRACTAL_MANIFEST__.json  __init__.py  stitching_task.py  thresholding_task.py  utils.py
src/fractal_ome_zarr_hcs_stitching/dev/: create_manifest.py  task_list.py
tests/: __init__.py  conftest.py  no_run_test_stitching_grid.py  test_stitching_grid.py  test_stitching_task.py  test_stitching_task_search_first.py  test_thresholding_task.py  test_valid_args_schemas.py  test_valid_manifest.py  test_valid_task_interface.py
tests/data/ngff_example/my_image/: .zattrs
tests/data/ngff_example/my_image/0/: .zarray
tests/data/ngff_example/my_image/1/: .zarray
tests/data/ngff_example/my_image/tables/: .zattrs
